<resources>
    <string name="app_name">BuyCar</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label">labeltext</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="Email">Email</string>
    <string name="telephone">Telephone</string>

    <string name="country">Country</string>
    <string name="dui_o_id">DUI o ID</string>
    <string name="web_client">233982210589-ei18b1ch2nj9kv5hivb7tg1evk6pl9fd.apps.googleusercontent.com</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
</resources>