<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField7"
        android:layout_width="345dp"
        android:layout_height="59dp"

        android:layout_marginTop="59dp"


        android:hint="@string/telephone"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="10dp"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField6">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText7"
            android:layout_width="346dp"
            android:layout_height="57dp"
            android:backgroundTint="@color/bar_color" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField8"
        android:layout_width="345dp"
        android:layout_height="55dp"

        android:layout_marginTop="55dp"


        android:hint="@string/country"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="10dp"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField7">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText8"
            android:layout_width="346dp"
            android:layout_height="57dp"
            android:backgroundTint="@color/bar_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField9"
        android:layout_width="347dp"
        android:layout_height="59dp"

        android:layout_marginStart="31dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="33dp"


        android:hint="@string/dui_o_id"
        android:orientation="vertical"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="10dp"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField8">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText9"
            android:layout_width="346dp"
            android:layout_height="57dp"
            android:backgroundTint="@color/bar_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField6"
        android:layout_width="349dp"
        android:layout_height="60dp"

        android:layout_marginTop="148dp"

        android:hint="@string/name"
        android:textColorHint="@color/white"
        app:boxCornerRadiusBottomEnd="15dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="15dp"
        app:boxCornerRadiusTopStart="10dp"
        app:hintTextColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.548"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditText6"
            android:layout_width="349dp"
            android:layout_height="56dp"
            android:backgroundTint="@color/bar_color" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button4"
        android:layout_height="wrap_content"
        android:layout_marginStart="131dp"
        android:layout_marginTop="54dp"
        android:layout_marginEnd="132dp"
        android:layout_marginBottom="91dp"
        android:text="Select  image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField9"
        android:layout_width="match_parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>